[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "kadath",email = "kro_968@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.2.69,<0.3.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langgraph-cli[inmem] (>=0.1.70,<0.2.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "langchain-openai (>=0.3.3,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
